--- a/web/views/contrato.html
+++ b/web/views/contrato.html
@@ -28,30 +28,32 @@
                         </div>                    
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group" ng-class="{ 'has-error' : userForm.fechaI.$invalid && !userForm.fechaI.$pristine }">
                         <label class="control-label col-md-4">Fecha inicio:
                             <span class="required"> * </span>
                         </label>
                         <div class="col-md-4">
                             <div class="input-group">
-                                <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="contrato.fechaIni" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Cerrar" current-text="Hoy" clear-text="Limpiar" alt-input-formats="altInputFormats" />
+                                <input type="text" name="fechaI" class="form-control" uib-datepicker-popup="{{format}}" ng-model="contrato.fechaIni" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Cerrar" current-text="Hoy" clear-text="Limpiar" alt-input-formats="altInputFormats" />
                                 <span class="input-group-btn">
                                     <button type="button" class="btn btn-default" ng-click="open($event)"><i class="fa fa-calendar"></i></button>
                                 </span>
                             </div>
+                            <p ng-show="userForm.fechaI.$invalid && !userForm.fechaI.$pristine" class="help-block"> Campo Requerido.</p>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" ng-class="{ 'has-error' : userForm.fechaF.$invalid && !userForm.fechaF.$pristine }">
                         <label class="control-label col-md-4">Fecha final:
                             <span class="required"> * </span>
                         </label>
                         <div class="col-md-4">
                             <div class="input-group">
-                                <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="contrato.fechaFinal" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Cerrar" current-text="Hoy" clear-text="Limpiar" alt-input-formats="altInputFormats" />
+                                <input name="fechaF" type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="contrato.fechaFinal" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Cerrar" current-text="Hoy" clear-text="Limpiar" alt-input-formats="altInputFormats" />
                                 <span class="input-group-btn">
                                     <button type="button" class="btn btn-default" ng-click="open2($event)"><i class="fa fa-calendar"></i></button>
                                 </span>
                             </div>
+                            <p ng-show="userForm.fechaF.$invalid && !userForm.fechaF.$pristine" class="help-block"> Campo Requerido.</p>
                         </div>
                     </div>
 
@@ -60,6 +62,9 @@
                     <div class="row">
                         <div class="col-md-offset-5 col-md-9">
                             <button
+                                data-placement="top"
+                                type="submit"
+                                ng-disabled="userForm.$invalid"
                                 class="btn green"
                                 mwl-confirm
                                 title="{{confirmationSettings.title}}"
