actualizacion Back para reportes

--- a/web/views/reportes.html
+++ b/web/views/reportes.html
@@ -1,4 +1,4 @@
-<div class="row" >
+<div id="container" styl<div class="row" >
     <div class="col-md-3">
         <div class="todo-ui">
             <div class="todo-sidebar">
@@ -18,7 +18,8 @@
                                 </li>
                                 <li>
                                     <a  ui-sref="main.reportes.reporte2">
-                                        <span>  </span> Montacargas de un Proyecto </a>                               
+                                        <span>  </span> Montacargas de un Proyecto </a>
+
                                 </li>
                             </ul>
                         </div>
@@ -29,5 +30,10 @@
     </div>
     <div class="col-md-9">
         <div ui-view class="fade-in-up"> </div>
+        <h1>dfg</h1>
+        
+
+<div id="containerGr" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>
+
     </div>
 </div>
