--- a/web/views/pages/login.html
+++ b/web/views/pages/login.html
@@ -25,6 +25,9 @@
                 <div class="form-group">
                     <label class="control-label visible-ie8 visible-ie9">Contraseña</label>
                     <input ng-model="usuario.pass" class="form-control form-control-solid placeholder-no-fix" type="password" autocomplete="off" placeholder="Contraseña" name="password" required/> </div>
+                    <div class="form-group">
+                        <span class="text-danger">{{msgtxt}}</span>
+                    </div>
                 <div class="form-actions">
                     <button type="submit" class="btn green uppercase" ng-disabled='entrando'>Iniciar</button>
 
@@ -48,4 +51,7 @@
 
     </div>
     <div class="copyright"> 2015 © Sistema Fleet. </div>
+    
+    
 </div>
+
