--- a/web/views/mantenimientos/realizar.html
+++ b/web/views/mantenimientos/realizar.html
@@ -42,6 +42,6 @@
 <toaster-container toaster-options="
                    {'time-out':{ 'toast-warning': 10, 'toast-error': 0,'toast-success':8000},
                    'close-button': true,
-    'position-class': 'toast-top-center' }">
+    'position-class': 'toast-top-right','hideEasing': 'linear' }">
                        
 </toaster-container>
