--- a/web/views/horimetro.html
+++ b/web/views/horimetro.html
@@ -71,7 +71,7 @@
                         <div class="col-md-4">
                             <md-content>
                                 <md-datepicker ng-model="horimetro.fechaIni" md-placeholder="Enter date"
-                                               md-min-date="minDate" md-max-date="maxDate" ng-required></md-datepicker>
+                                               ng-required></md-datepicker>
                             </md-content>
                             <!--                            <div class="input-group">
                                                             <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="horimetro.fechaIni" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Cerrar" current-text="Hoy" clear-text="Limpiar" alt-input-formats="altInputFormats"/>
